# flow

./: CMakeLists.txt  CorrectionTask.cpp  CorrectionTask.h  CorrelationTask.cpp  CorrelationTask.h  main.cpp
Analysis/: Analysis.cpp  CMakeLists.txt  Correct.cpp  CorrectionTask.cpp  CorrectionTask.h  CorrelationTask.cpp  CorrelationTask.h
Analysis/ReducedEvent/: AliReducedInfoCut.h  AliReducedPairInfo.cpp  AliReducedVarManager.cpp  CMakeLists.txt
DifferentialCorrection/Interface/: DataFiller.cpp  DataFiller.h
ReducedEvent/: CMakeLists.txt
analysis/: CMakeLists.txt  CorrelationTask.cpp  CorrelationTask.h  FemtoDstVarManager.cpp  FemtoDstVarManager.h
macro/: run.sh  save_graphs.C
